--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.1",
     "svix": "^1.62.0",
     "tailwind-merge": "^3.0.2",
