--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@clerk/nextjs": "^6.12.8",
     "@google-cloud/vision": "^5.1.0",
     "@google/generative-ai": "^0.24.0",
+    "@imgly/background-removal": "^1.6.0",
     "@lemonsqueezy/lemonsqueezy.js": "^4.0.0",
     "@neondatabase/serverless": "^0.10.4",
     "@prisma/client": "^6.5.0",
@@ -31,7 +32,9 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.483.0",
     "micro": "^10.0.1",
+    "motion": "^12.6.5",
     "next": "15.2.3",
+    "onnxruntime-web": "^1.21.0-dev.20250206-d981b153d3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
