--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@neondatabase/serverless": "^0.10.4",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-alert-dialog": "^1.1.6",
-    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
@@ -46,7 +46,8 @@
     "svix": "^1.62.0",
     "tailwind-merge": "^3.0.2",
     "tesseract.js": "^6.0.0",
-    "tw-animate-css": "^1.2.4"
+    "tw-animate-css": "^1.2.4",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
